generated/nixidy/prod/maintainerr/Deployment-maintainerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: maintainerr
    app.kubernetes.io/instance: maintainerr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: maintainerr
  name: maintainerr
  namespace: dotfiles
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: maintainerr
      app.kubernetes.io/instance: maintainerr
      app.kubernetes.io/name: maintainerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: maintainerr
        app.kubernetes.io/instance: maintainerr
        app.kubernetes.io/name: maintainerr
    spec:
      automountServiceAccountToken: true
      containers:
        - image: ghcr.io/jorenn92/maintainerr:2.18.2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          name: maintainerr
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /opt/data
              name: config
            - mountPath: /tmp
              name: tmpfs
              subPath: tmp
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: maintainerr
        - emptyDir: {}
          name: tmpfs
