generated/nixidy/prod/maintainerr/Service-maintainerr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: maintainerr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: maintainerr
    app.kubernetes.io/service: maintainerr
  name: maintainerr
  namespace: dotfiles
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/controller: maintainerr
    app.kubernetes.io/instance: maintainerr
    app.kubernetes.io/name: maintainerr
  type: ClusterIP
